Fix Blockquote and Wrap override images url

--- a/css/colormag.less
+++ b/css/colormag.less
@@ -615,6 +615,10 @@ blockquote {
     border-width: 1px 4px 1px 1px;
 }
 
+[dir] .dokuwiki blockquote.blockquote-plugin {
+    background: url(images/override/blockquote.png) no-repeat 1.4rem 1.4rem;
+}
+
 [dir] blockquote blockquote {
     margin: .4rem;
 }
