--- a/css/colormag.theme.less
+++ b/css/colormag.theme.less
@@ -828,7 +828,7 @@ PLUGINS
 --------------------------------------------------------------*/
 
 [dir] .dokuwiki blockquote.blockquote-plugin {
-    background: @ini_background_alt url(images/override/blockquote.png) no-repeat 1.4rem 1.4rem;
+    background-color: @ini_background_alt;
 }
 
 .dokuwiki blockquote.blockquote-plugin p cite {
@@ -946,13 +946,6 @@ div.plugin_translation ul li a.wikilink2:hover {
 }
 [dir] span.wrap_todo {
     background-color: mix(#fff, mix(@ini_color_green, @ini_color_blue, 50%), 50%);
-}
-
-[dir] div.wrap_download {
-    background-image: url(images/override/wrap_download_48.png);
-}
-[dir] span.wrap_download {
-    background-image: url(images/override/wrap_download_16.png);
 }
 
 [dir] span.wrap_hi {
