--- a/css/src/colormag.less
+++ b/css/src/colormag.less
@@ -519,6 +519,10 @@ blockquote {
     padding: .75rem;
 }
 
+.dokuwiki blockquote.blockquote-plugin {
+    background: url(images/override/blockquote.png) no-repeat 1.4rem 1.4rem;
+}
+
 blockquote blockquote {
     margin: .4rem;
 }
