--- a/css/src/colormag.theme.less
+++ b/css/src/colormag.theme.less
@@ -797,7 +797,7 @@ PLUGINS
 --------------------------------------------------------------*/
 
 .dokuwiki blockquote.blockquote-plugin {
-    background: @ini_background_alt url(images/override/blockquote.png) no-repeat 1.4rem 1.4rem;
+    background-color: @ini_background_alt;
 }
 
 .dokuwiki blockquote.blockquote-plugin p cite {
@@ -927,13 +927,6 @@ div.wrap_todo {
 }
 span.wrap_todo {
     background-color: mix(#fff, mix(@ini_color_green, @ini_color_blue, 50%), 50%);
-}
-
-div.wrap_download {
-    background-image: url(images/override/wrap_download_48.png);
-}
-span.wrap_download {
-    background-image: url(images/override/wrap_download_16.png);
 }
 
 span.wrap_hi {
